--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -35,7 +35,7 @@
             </ol>
             <li type="circle">Heading</li>
             <li type="circle"><i>em</i></li>
-            <li type="circle"><b>strong</b>></li>
+            <li type="circle"><b>strong</b></li>
         </ul>
 
 
