--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -34,6 +34,7 @@
                 <li>Body</li>
             </ol>
             <li type="circle">Heading</li>
+            <li type="circle">Paragraph</li>
             <li type="circle"><i>em</i></li>
             <li type="circle"><b>strong</b></li>
         </ul>
