--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio1</title>
+    <title>Cosas que he aprendido</title>
 </head>
 
 <body>
